package StreamingProg;

import java.util.ArrayList;
import java.util.HashMap;

public class FileIO {

    public HashMap<String, User> loadUserData(String path) {
        HashMap<String, User> userData = new HashMap<>();
        return userData;
    }

    public void saveUserData(String path, HashMap<String, User> userData) {

    }

    //De her to skal rettes til
    public List<Movie> readMovieData(String path) {
        List<Movie> moviesList = new ArrayList<>();
        return Movie;
    }

    public List<Series> readSeriesData(String path) {
        List<Series> seriesList = new ArrayList<>();
    }
}