package StreamingProg;

import java.util.ArrayList;

public class Menu {
    private String userName;

    public ArrayList<Media> mediaArrayList = new ArrayList<>();
    public ArrayList<Movie> movieArrayList = new ArrayList<>();
    public ArrayList<Series> seriesArrayList = new ArrayList<>();

    public static void searchFilm(String title){

    } // Definer String title i anden klasse

    public static void sortByCategory(String category) {

    } // Definer String category i anden klasse

    public static void watchedFilms(String userName) {

    } // Definer String userName i anden klasse

    public static void savedFilms(String userName) {

    } // Definer String userName i anden klasse

    public ArrayList<Media> searchMovies(String search){
        return mediaArrayList;
    } // Skal denne return movieArraylist??

    public static void displayMenu(){

    } // Vi skal lave Menuclass før den her





}
