@startuml
!pragma layout smetana

class Main{
+ static void main(String[] args)
}
Main <-- LogonMenu
class LogonMenu{
- String username
- String password

+ void createUser()
+ void loginCurrentUser(String username, String password)

}

LogonMenu <-- createUser
LogonMenu --> createUser

 class createUser {

- String username
- String password
- Getter & Setter
+ HashMaps<username,password> userData

+ void createUser(String username, String password)
}

LogonMenu <-- loginCurrentUser

class loginCurrentUser{
- String username
- String password
+ HashMaps<username,password> userData

+ loginCurrentUser(String username, String password)
}

loginCurrentUser <-- Menu
class Menu{
+ List<movies> movies
+ List<series> series

+ void watchedFilms()
+ void savedFilms()
}

Menu <-- FileIO
class FileIO{
 + List<movies> movies
 + List<series> series

- (FileNotFoundException E)
+ List<movies> readMoviesData(String path)
+ List<Series> readSeriesData(String path)

+ void saveData(List<movies>, String path, String header);
+ void saveData(List<series>, String path, String header);


}
@enduml